# django-fga-data-sync

./: .gitignore  .justfile  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  mypy-pre-commit.ini  p.txt  pyproject.toml
.github/workflows/: publish.yml
docs/: authorization_schema.md  flow.md  index.md
docs/api/: configs.md  mixins.md  permissions.md  settings.md
docs/architecture/: philosophy.md
docs/assets/css/: extra.css
docs/examples/: advanced-trees.md  advanced_creation.md  frontend-integration.md  models.md  stateless-views.md  views.md
docs/getting-started/: architecture.md  authz-flow.md  docker-traefik.md  installation.md  zanzibar-model.md
docs/guides/: advanced-trees.md  models.md  views.md
docs/schema/: design-guide.md  local-db-fields.md  role-assignments.md
src/authz_data_sync/: __init__.py  apps.py  conf.py  exceptions.py  middleware.py  mixins.py  models.py  permissions.py  structs.py  tasks.py  utils.py  views.py
src/fga_data_sync/: __init__.py  adapters.py  admins.py  apps.py  batchers.py  conf.py  exceptions.py  loggers.py  middleware.py  mixins.py  models.py  permissions.py  serializers.py  services.py  structs.py  tasks.py  utils.py
tests/: conftest.py  models.py  test_behavioral_parity.py  test_conf.py  test_core.py  test_middleware.py  test_mixins.py  test_permissions.py  test_serializers.py  test_services.py  test_settings.py  test_structs.py  test_tasks.py  test_utils.py  test_views_and_mixins.py  views.py
